--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^6.29.0",
     "swiper": "^11.2.3"
   },
   "devDependencies": {
